--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Generate faker fixtures for your fields",
   "main": "index.js",
   "scripts": {
-    "test": "jest --silent",
+    "test": "jest --silent"
   },
   "author": "Lab Digital <opensource@labdigital.nl>",
   "license": "MIT",
@@ -13,6 +13,7 @@
     "ts-deepmerge": "5.0.0"
   },
   "devDependencies": {
+    "@changesets/cli": "^2.26.2",
     "@faker-js/faker": "7.6.0",
     "@graphql-codegen/cli": "1.21.4",
     "@graphql-codegen/plugin-helpers": "3.1.2",
