--- a/package.json
+++ b/package.json
@@ -1,28 +1,33 @@
 {
   "name": "graphql-codegen-faker-fixtures",
-  "version": "0.1.0",
   "description": "Generate faker fixtures for your fields",
   "main": "index.js",
-  "scripts": {
-    "test": "jest --silent"
-  },
   "author": "Lab Digital <opensource@labdigital.nl>",
+  "version": "0.1.0",
   "license": "MIT",
+  "engines": {
+    "node": ">=18"
+  },
+  "packageManager": "pnpm@8.6.7",
+  "scripts": {
+    "test": "jest --silent",
+  },
   "dependencies": {
     "deepmerge-ts": "4.2.2",
+    "graphql": "^16.7.1",
     "ts-deepmerge": "5.0.0"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
-    "@faker-js/faker": "7.6.0",
-    "@graphql-codegen/cli": "1.21.4",
-    "@graphql-codegen/plugin-helpers": "3.1.2",
-    "@types/jest": "29.2.6",
-    "graphql": "15.8.0",
-    "immer": "9.0.18",
-    "jest": "29.3.1",
-    "prettier": "2.8.3",
-    "ts-jest": "29.0.5",
-    "typescript": "4.9.5"
+    "@faker-js/faker": "^8.0.2",
+    "@graphql-codegen/cli": "^4.0.1",
+    "@graphql-codegen/plugin-helpers": "^5.0.0",
+    "@labdigital/eslint-config-node": "^0.0.5",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.2",
+    "graphql-tag": "^2.12.6",
+    "jest": "^29.6.1",
+    "prettier": "^3.0.0",
+    "typescript": "^5.1.6"
   }
 }
