--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
   "name": "graphql-codegen-faker-fixtures",
   "description": "Generate faker fixtures for your fields",
-  "main": "index.js",
   "author": "Lab Digital <opensource@labdigital.nl>",
   "version": "0.1.0",
   "license": "MIT",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
   "engines": {
     "node": ">=18"
   },
   "packageManager": "pnpm@8.6.7",
   "scripts": {
     "test": "jest --silent",
+    "start": "tsup --watch",
+    "build": "tsup"
   },
   "dependencies": {
     "deepmerge-ts": "4.2.2",
@@ -28,6 +35,7 @@
     "graphql-tag": "^2.12.6",
     "jest": "^29.6.1",
     "prettier": "^3.0.0",
+    "tsup": "^7.1.0",
     "typescript": "^5.1.6"
   }
 }
