--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "test": "jest --silent",
     "start": "tsup --watch",
     "build": "tsup"
+    "lint": "eslint --max-warnings 0",
   },
   "dependencies": {
     "deepmerge-ts": "4.2.2",
