--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "format": "prettier \"**/*.{ts,tsx,md}\" --write",
     "lint": "eslint --max-warnings 0",
     "start": "tsup --watch",
-    "test": "jest --silent",
+    "test": "vitest --run",
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
@@ -34,13 +34,11 @@
     "@graphql-codegen/cli": "^5.0.0",
     "@graphql-codegen/plugin-helpers": "^5.0.0",
     "@labdigital/eslint-config-node": "^0.1.0",
-    "@types/jest": "^29.5.3",
     "@types/node": "^20.4.2",
     "graphql-tag": "^2.12.6",
-    "jest": "^29.6.1",
     "prettier": "^3.0.0",
-    "ts-jest": "^29.1.1",
     "tsup": "^7.1.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "vitest": "^0.33.0"
   }
 }
