--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,7 @@
     "strict": true,
     "strictNullChecks": true,
     "types": [
-      "node",
-      "jest"
+      "node"
     ]
   },
   "exclude": [
