--- a/example/codegen.yml
+++ b/example/codegen.yml
@@ -1,8 +1,17 @@
 schema: example/schema.graphql
 documents: example/queries.ts
+verbose: true
 generates:
   example/fixture_builders.ts:
     plugins:
       - ./dist/index.js
     config:
-      - typeImports: "@types"
+      typeImport: "@types"
+      fakerjsSeed: 98765
+      scalars:
+        String:
+          - firstName: faker.person.firstName()
+          - lastName: faker.person.lastName()
+          - phone: faker.phone.number()
+        Boolean:
+          - married: faker.helpers.arrayElement(['yes', 'no'])
