--- a/example/codegen.yml
+++ b/example/codegen.yml
@@ -10,8 +10,12 @@ generates:
       fakerjsSeed: 98765
       scalars:
         String:
-          - firstName: faker.person.firstName()
-          - lastName: faker.person.lastName()
-          - phone: faker.phone.number()
+          firstName:
+            default: faker.internet.email()
+            field: faker.person.firstName()
+            object:
+              Person: faker.animal.type()
+          lastName: faker.person.lastName()
+          phone: faker.phone.number()
         Boolean:
-          - married: faker.helpers.arrayElement(['yes', 'no'])
+          married: faker.helpers.arrayElement(['yes', 'no'])
