--- a/example/codegen.yml
+++ b/example/codegen.yml
@@ -10,12 +10,12 @@ generates:
       fakerjsSeed: 98765
       scalars:
         String:
-          firstName:
-            default: faker.internet.email()
-            field: faker.person.firstName()
-            object:
-              Person: faker.animal.type()
+          _default: faker.internet.word()
+          firstName: faker.person.firstName()
           lastName: faker.person.lastName()
           phone: faker.phone.number()
         Boolean:
           married: faker.helpers.arrayElement(['yes', 'no'])
+        ID:
+          id: faker.string.symbol()
+          Person.id: faker.string.nanoid()
