--- a/example/codegen.yml
+++ b/example/codegen.yml
@@ -4,13 +4,13 @@ verbose: true
 generates:
   example/fixture_builders.ts:
     plugins:
-      - ./dist/index.js
+      - dist/index.js
     config:
       typeImport: "@types"
       fakerjsSeed: 98765
       scalars:
         String:
-          _default: faker.internet.word()
+          _default: faker.lorem.word()
           firstName: faker.person.firstName()
           lastName: faker.person.lastName()
           phone: faker.phone.number()
