feat: add lifecycle hook to examples

--- a/example/codegen.yml
+++ b/example/codegen.yml
@@ -19,3 +19,6 @@ generates:
         ID:
           id: faker.string.symbol()
           Person.id: faker.string.nanoid()
+hooks:
+  afterOneFileWrite:
+    - prettier --write
