--- a/example/codegen.yml
+++ b/example/codegen.yml
@@ -9,6 +9,9 @@ generates:
       typeImport: "@types"
       fakerjsSeed: 98765
       scalars:
+        Email:
+          _default: faker.internet.email()
+          secondaryEmail: faker.internet.exampleEmail()
         String:
           _default: faker.lorem.word()
           firstName: faker.person.firstName()
