--- a/package.json
+++ b/package.json
@@ -4,6 +4,15 @@
   "author": "Lab Digital <opensource@labdigital.nl>",
   "version": "0.5.1",
   "license": "MIT",
+  "keywords": [
+    "graphql",
+    "codegen",
+    "graphql-codegen",
+    "plugin",
+    "typescript",
+    "mocks",
+    "fakes"
+  ],
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "typings": "dist/index.d.ts",
@@ -26,14 +35,14 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.0.2",
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/plugin-helpers": "^5.0.0",
     "deepmerge-ts": "5.1.0",
     "graphql": "^16.7.1"
   },
   "devDependencies": {
     "@changesets/cli": "^2.26.2",
-    "@faker-js/faker": "^8.0.2",
-    "@graphql-codegen/cli": "^5.0.0",
-    "@graphql-codegen/plugin-helpers": "^5.0.0",
     "@labdigital/eslint-config-node": "^0.2.0",
     "@types/jest": "^29.5.3",
     "@types/node": "^20.5.7",
@@ -46,6 +55,7 @@
     "vitest": "^0.33.0"
   },
   "peerDependencies": {
-    "@graphql-codegen/cli": "^5.0.0"
+    "@graphql-codegen/cli": "^5.0.0",
+    "@graphql-codegen/plugin-helpers": "^5.0.0"
   }
 }
